--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
 <html>
     <head>
         <title>Webcam</title>
+        <script>
+          setTimeout(function(){
+            window.location.reload(1);
+          }, 5000);
+        </script>
     </head>
     <body>
         <h1>Last image:</h1>
         <img src="/images/last" style="border: 3px solid black"/>
-        <br>
-        <a href="/r"><button>Take photo</button></a>
-        <a href="/stream" target="blank"><button>Stream</button></a>
     </body>
 </html>
