--- a/templates/stream.html
+++ b/templates/stream.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Video Stream</h1>
-        <img src="{{ url_for('video_feed') }}">
+        <img src="/images/last" style="border: 3px solid black"/>
     </body>
 </html>
