Add navigation links

--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -5,6 +5,8 @@
   <body>
     <h1> Water Levels </h1>
 
+    <a href="/"> Back to main page </a>
+
     <canvas id="myChart"></canvas>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
