--- a/templates/index.html
+++ b/templates/index.html
@@ -23,5 +23,7 @@
 
         <h2> Adjust brightness </h2>
         <input type="range" min="50" max="200" value="100" class="slider" id="brightnessRange">
+
+        <a href="/abstract"> Abstract View </a>
     </body>
 </html>
