Beginnings of LocalStorage, logs table
Logs table generated through JS
Data is stored in the proper format in localstorage

--- a/templates/abstract.html
+++ b/templates/abstract.html
@@ -14,6 +14,7 @@
     <script>
       var ctx = document.getElementById('myChart').getContext('2d');
       var data = [new Date(), {{ data | safe }}];
+      let storage = [];
       console.log(data);
 
       var labels = data[1].map(function(value, index) { return index })
@@ -33,16 +34,9 @@
           },
           options: {}
       });
-    </script>
 
-    <script>
-      var storage = [];
-      // let data = [ new Date(), {{ data }} ];
-      
-      function store(data){ // I have no idea how to actually call things but this is how you would store it in localstorage as far as I'm aware.
-        storage.push(data);
-        localStorage.setItem("storage", JSON.stringify(storage));
-      }
+      storage.push(data);
+      localStorage.setItem("storage", JSON.stringify(storage));
     </script>
   </body>
 </html>
