--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,9 @@
 
         <h2> Adjust brightness </h2>
         <input type="range" min="50" max="200" value="100" class="slider" id="brightnessRange">
-
+        <p></p>
         <a href="/abstract"> Abstract View </a>
+        <p></p>
+        <a href="/logs"> Logs </a>
     </body>
 </html>
