No more fake data, now static image
Added .vscode\settings.json to gitignore because unchecking it every single time got annoying.

--- a/templates/logs.html
+++ b/templates/logs.html
@@ -82,6 +82,7 @@
                         popup.innerHTML = "";
                         popup.style.display = "none";
                     }
+                    cell.colSpan = 1;
                     cell.innerHTML = timestamp[1][i];
                 }
             }
